W2.Parser/alt/test/invalid/invalid3.c
//NOT ERROR FREE - This test case includes an error in which a string is not closed
#include <stdio.h>

int main()
{
	char str[] = "Hello"
	printf("Hello);
	return 0;
}
	